--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.2.0",
     "axios": "^1.11.0",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
